tests/ui/fail/missing-resource/missing-resource.rs
l10n::init!();

fn main() {}
