tests/ui/fail/missing-resource/missing-resource.stderr
error: build l10n errors:
         - missing resource "settings" for locale: en
 --> tests/ui/fail/missing-resource/missing-resource.rs:1:1
  |
1 | l10n::init!();
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `l10n::init` (in Nightly builds, run with -Z macro-backtrace for more info)
